# Emovir

./: Procfile  README.md  app.py  config.py  extensions.py  forms.py  mailer.py  models.py  payments.py  pyproject.toml  replit_zip_error_log.txt
attached_assets/: Pasted-1-Confirmar-si-el-Usuario-es-Administrador-Accede-a-la-ruta-setup-admin-o-crea-una-ruta-temporal-p-1735510920177.txt  Pasted-1-L-gica-de-Acceso-Usuarios-No-Videntes-Gratis-Validaci-n-del-Documento-Subido-Cuando-un-usuario-1735532897699.txt  Pasted-1-Reestructurar-para-Resolver-el-Error-de-Importaci-n-Circular-El-error-de-importaci-n-circular-ocu-1735522291024.txt  Pasted-1-Verifica-si-el-Usuario-Existe-Primero-confirmemos-si-el-correo-info-emovir-com-est-registrado-e-1735511307682.txt  Pasted-2024-12-30T05-49-26Z-info-Deployment-67b0d19d-bb6d-4869-8943-c79d1af96687-2024-12-30T05-49-26Z-inf-1735538118835.txt  Pasted-C-digo-de-Validaci-n-de-Email-Es-probable-que-exista-una-funci-n-o-regla-en-tu-backend-que-verifica-1735506792633.txt  Pasted-El-error-jinja2-exceptions-UndefinedError-form-is-undefined-ocurre-porque-en-una-de-tus-plantilla-1735521393890.txt  Pasted-El-usuario-info-emovir-com-existe-est-marcado-como-administrador-y-est-verificado-Esto-es-excele-1735512270756.txt  Pasted-Guardar-Usuarios-en-la-Base-de-Datos-El-Agente-IA-de-Replit-ya-genera-autom-ticamente-una-base-de-d-1735510389364.txt  Pasted-Pasos-para-Resolver-el-Problema-del-Inicio-de-Sesi-n-del-Administrador-Verifica-los-Logs-de-Errores--1735506625825.txt  (+4 more)
migrations/: env.py
static/: main.py
templates/: base.html  home.html
(+16 files in other folders)
