[project]
name = "repl-nix-contactmanagerpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gtts>=2.5.4",
    "phonenumbers>=8.13.52",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "pyjwt>=2.10.1",
    "flask-migrate>=4.0.7",
    "flask-babel>=4.0.0",
    "paypalrestsdk>=1.13.3",
    "oauthlib>=3.2.2",
    "itsdangerous>=2.2.0",
    "openai>=1.58.1",
    "twilio>=9.4.1",
    "gunicorn>=23.0.0",
    "gevent>=24.11.1",
]
